<resources>
    <string name="app_name">AndroidBase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aceptar">Aceptar</string>
    <string name="tittle_message">Tittle message</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="body_message">Body message</string>
    <string name="error_service">Servicio no disponible, intente más tarde.</string>
    <string name="verifica_conexion">Verifica tu conexion de internet</string>
    <string name="users">Users</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="n_mero">Número:</string>
    <string name="id">Id:</string>
    <string name="empty">...........................</string>
    <string name="t_tulo">Título</string>
    <string name="detalle">DETALLE</string>
    <string name="hero_guest">HERO GUEST</string>
    <string name="usuario">usuario</string>
    <string name="contrase_a">contraseña</string>
    <string name="confirmar_contrase_a">confirmar contraseña</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="eror_passwords">Las contraseñas no coincide</string>
    <string name="error">Error</string>
    <string name="user_or_pwd_wrong">Usuario o contraseña incorrectos</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="realizar_consulta">Realizar consulta</string>
    <string name="mostrar_ltima_consulta">Mostrar última consulta</string>
    <string name="sismos">Sismos</string>
    <string name="select_date">Selecciona una fecha para poder realizar la consulta</string>
    <string name="not_imformation">Actualmente no existe información</string>
    <string name="lugar">Lugar</string>
    <string name="magnitud_de_sismo">Magnitud de sismo</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="latitud">latitud</string>
    <string name="longitud">longitud</string>
    <string name="error_db">Error en base de datos</string>
    <string name="no_data_found">No se encontraron resultados</string>
    <string name="not_pwd_concidence">La contraseña no coincide</string>
    <string name="google_maps_key">AIzaSyC0fBMLfEvTy-CKJl2Wet0bFxnfclln62g</string>
</resources>