<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.home.HomeFragment">

        <Button
            android:id="@+id/btn_selecionar_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_fecha"
            app:layout_constraintBottom_toTopOf="@+id/btn_make_query"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_make_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realizar_consulta"
            app:layout_constraintBottom_toTopOf="@+id/btn_last_query"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_selecionar_date" />

        <Button
            android:id="@+id/btn_last_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrar_ltima_consulta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_make_query" />

        <TextView
            android:id="@+id/tv_today_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="17/11/2023" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>