<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_lugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lugar"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_lugar"
                app:srcCompat="@drawable/user" />

            <TextView
                android:id="@+id/tv_coordenadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/latitud"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_magnitud"
                app:layout_constraintTop_toBottomOf="@+id/tv_magnitud" />

            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/longitud"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_coordenadas"
                app:layout_constraintTop_toBottomOf="@+id/tv_coordenadas" />

            <TextView
                android:id="@+id/tv_magnitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/magnitud_de_sismo"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_lugar"
                app:layout_constraintTop_toBottomOf="@+id/tv_lugar" />

            <TextView
                android:id="@+id/tv_value_lugar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text=""
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_lugar"
                app:layout_constraintTop_toTopOf="@+id/tv_lugar" />

            <TextView
                android:id="@+id/tv_value_magnitud"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text=""
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/tv_value_lugar"
                app:layout_constraintStart_toEndOf="@+id/tv_magnitud"
                app:layout_constraintTop_toTopOf="@+id/tv_magnitud" />

            <TextView
                android:id="@+id/tv_value_latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text=""
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/tv_value_magnitud"
                app:layout_constraintStart_toEndOf="@+id/tv_coordenadas"
                app:layout_constraintTop_toTopOf="@+id/tv_coordenadas" />

            <TextView
                android:id="@+id/tv_value_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text=""
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/tv_value_latitude"
                app:layout_constraintStart_toEndOf="@+id/tv_longitude"
                app:layout_constraintTop_toTopOf="@+id/tv_longitude" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_maps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>